# scool

./: README.md  clean.sh  deploy-doc.sh  nd.sh
containers/singularity/: README.md  scool-examples.def  scool-tau.def
examples/: CMakeLists.txt  build.sh  clean.sh  rebuild.sh
examples/bnsl/: CMakeCache.txt  CMakeLists.txt  Makefile  bit_util.hpp  bnsl_mpi.cpp  bnsl_task.hpp  cmake_install.cmake
examples/cmake/: FindMPI.cmake  README.md
examples/data/bnsl/: asia.8x200.mps  asia.8x200.ord  insurance.27x200K.mps  mildew.35x160K.mps  water.32x100K.mps
examples/data/qap/: Nug6.sln  README.md  chr8a.sln
examples/data/tsp/: README.md
examples/qap/: CMakeLists.txt  qap_mpi.cpp
examples/qap/libhungarian/: CMakeLists.txt  Makefile  hungarian.hpp
examples/toy/: MPSList.hpp  a.out  bit_util.hpp  bnsl_omp.cpp  bnsl_state.hpp  bnsl_task.hpp  limits.hpp  qap_common.hpp  qap_omp.cpp  qap_shm.cpp  qap_state.hpp  qap_task.hpp  slurm.sh  toy_main.cpp  toy_state.hpp  toy_task.hpp
examples/toy/libhungarian/: README.md
examples/tsp/: CMakeLists.txt  tsp_common.hpp  tsp_mpi.cpp  tsp_shm.cpp  tsp_state.hpp  tsp_task.hpp
include/: LICENSE  a.out  impl.hpp  mpi_executor.hpp  mpi_impl.hpp  omp_executor.hpp  omp_impl.hpp  omp_process_table.hpp  omp_process_test.cpp  omp_process_view.hpp  partitioner.hpp  simple_executor.hpp  simple_task.hpp  utility.hpp
include/jaz/: algorithm.hpp  hash.hpp  logger.hpp
include/mpix/: logger.hpp  mpi_types.hpp
nd/: Project.txt
nd/style/: Style.txt  style.css
template/: README.md  context.hpp  executor.hpp  partitioner.hpp  state.hpp  task.hpp
tools/: scool-project-init
