CMAKE_MINIMUM_REQUIRED(VERSION 3.18)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")

PROJECT(SCoOL C CXX)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

IF (NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "Release")
ENDIF()

SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
SET(CMAKE_CXX_FLAGS_RELEASE "-O2")
SET(CMAKE_CXX_FLAGS_PROFILE "-g -fno-omit-frame-pointer -O2")

FIND_PACKAGE(Threads REQUIRED)
FIND_PACKAGE(OpenMP)
FIND_PACKAGE(MPI REQUIRED)

IF (OpenMP_CXX_FOUND)
  ADD_COMPILE_OPTIONS(${OpenMP_CXX_FLAGS})
  LINK_LIBRARIES(${OpenMP_CXX_LIBRARIES})
ENDIF()

INCLUDE_DIRECTORIES(../include)


ADD_SUBDIRECTORY(bnsl)
ADD_SUBDIRECTORY(qap)
ADD_SUBDIRECTORY(tsp)
