ADD_SUBDIRECTORY(libhungarian)

ADD_EXECUTABLE(qap_shm qap_shm.cpp)
TARGET_LINK_LIBRARIES(qap_shm hungarian)

ADD_EXECUTABLE(qap_mpi qap_mpi.cpp)
TARGET_COMPILE_OPTIONS(qap_mpi PRIVATE ${MPI_CXX_COMPILE_FLAGS})
TARGET_INCLUDE_DIRECTORIES(qap_mpi PRIVATE ${MPI_CXX_INCLUDE_PATH})
TARGET_LINK_LIBRARIES(qap_mpi hungarian ${MPI_CXX_LIBRARIES})

INSTALL(TARGETS "qap_shm" "qap_mpi" RUNTIME DESTINATION ../bin)
