ADD_EXECUTABLE(tsp_shm tsp_shm.cpp)

ADD_EXECUTABLE(tsp_mpi tsp_mpi.cpp)
TARGET_COMPILE_OPTIONS(tsp_mpi PRIVATE ${MPI_CXX_COMPILE_FLAGS})
TARGET_INCLUDE_DIRECTORIES(tsp_mpi PRIVATE ${MPI_CXX_INCLUDE_PATH})
TARGET_LINK_LIBRARIES(tsp_mpi ${MPI_CXX_LIBRARIES})

INSTALL(TARGETS "tsp_shm" "tsp_mpi" RUNTIME DESTINATION ../bin)
